Postgres client cleanups (it passes existing tests)